--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,19 @@
 .App {
     --header_height: 60px;
+    position: relative;
+    height: 100%;
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    z-index: 100;
 }
 
 .hw {
-
+position: absolute;
 }
 
 .hwTitle {
-
+    padding: 20px 20px 20px 0;
 }
