--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,34 @@
 .sendForm {
-
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .textarea {
-
+    width: 80%;
+    height: 30px;
+    border-radius: 20px;
+    background-color: whitesmoke;
+    box-sizing: border-box;
+    border: none;
+    resize: none;
 }
 
 .button {
+    width: 80px;
+    height: 30px;
+    color: white;
+    background-color: #0059b3;
+    border-radius: 20px;
+    border: none;
+    margin-left: 20px;
 
 }
 
 .button:hover {
 
 }
+
 .button:active {
 
 }
