--- a/src/s2-homeworks/hw04/Stand.module.css
+++ b/src/s2-homeworks/hw04/Stand.module.css
@@ -14,10 +14,12 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    padding: 20px;
 }
 
 .checkboxes {
     display: flex;
     flex-direction: column;
     gap: 36px;
+    width: 100px;
 }
