--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,24 +1,69 @@
 .sidebar {
+    display: none;
+    z-index: 1;
 }
 
 .sidebar.open {
+    display: inline;
+    position: absolute;
+    width: 317px;
+    height: 720px;
+    left: 0;
+    top: 0;
+    background: #FFFFFF;
+    box-shadow: 0 10px 40px rgba(29, 33, 38, 0.13), 0 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 0;
+    z-index: 3;
 }
 
 .background {
+    position: absolute;
+    width: 1280px;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    background: #000000;
+    opacity: 0.3;
+    z-index: 2;
 }
 
 .nav {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    left: 100px;
+    top: 135px;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .nav a {
+    text-decoration: none;
 }
 
 .nav a:hover {
+    text-decoration-line: underline;
+    color: #0059B2;
 }
 
 .nav a.active {
+    color: #58ACFF;
 }
+
 .close {
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    background-color: #FFFFFF;
+    border: none;
 }
 
 .close img {
