--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -10,9 +10,17 @@
 }
 
 .hw {
-position: absolute;
+    position: absolute;
 }
 
 .hwTitle {
     padding: 20px 20px 20px 0;
+}
+
+.wrapper{
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
