--- a/src/s2-homeworks/hw06/HW6.module.css
+++ b/src/s2-homeworks/hw06/HW6.module.css
@@ -1,5 +1,15 @@
 .buttonsContainer {
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+
 }
 
 .editableSpanContainer {
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
