--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -11,6 +11,8 @@
 
 .hw {
     position: absolute;
+    display: flex;
+    flex-direction: column;
 }
 
 .hwTitle {
@@ -18,7 +20,7 @@
 }
 
 .wrapper{
-    padding-top: 100px;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
