--- a/src/s2-homeworks/hw07/HW7.module.css
+++ b/src/s2-homeworks/hw07/HW7.module.css
@@ -1,2 +1,7 @@
 .container {
+    padding-top: 20px;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    justify-content: space-between;
 }
