--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,9 +1,17 @@
 .select {
+    background: #FFFFFF;
+    border: 1px solid #C2C2C2;
+    border-radius: 2px;
+    width: 165px;
+    height: 24px;
+    cursor:pointer;
 }
 
 .select:focus {
+    color: #0066CC;
 }
 
 
 .option:hover {
+
 }
