--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -21,6 +21,7 @@
 
 .wrapper{
     padding-top: 50px;
+    padding-right: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
