--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,36 +1,28 @@
 .App {
-    --header_height: 60px;
     position: relative;
     height: 100%;
-    width: 85%;
+    width: 80%;
     margin: 0 auto;
+    display: flex;
     align-items: center;
     flex-wrap: wrap;
+    flex-direction: column;
     z-index: 100;
 }
 
 .container{
-    padding: 100px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding-top: 10px;
 }
 
 .hw {
-    padding-top: 50px;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
+    margin-top: 10px;
 }
 
 .hwTitle {
-    padding: 20px 20px 20px 0;
 }
 
 .wrapper{
-    padding-top: 50px;
-    padding-right: 800px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
 }
