--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 5px 24px;
     gap: 10px;
-    width: 132px;
+    width: auto;
     height: 30px;
     border-radius: 3px ;
     font-family: 'Montserrat', sans-serif;
