--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,29 +1,19 @@
 .burgerMenuIcon {
-    position: absolute;
-    left: 12.5%;
-    right: 12.5%;
-    top: 25%;
-    bottom: 66.67%;
+    padding-right: 300px;
 }
 
 .header {
-    position: absolute;
-    width: 1280px;
+    width: 100%;
     height: 60px;
-    left: 0;
-    top: 0;
-
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1;
     background: #FFFFFF;
     box-shadow: 0 0 40px rgba(29, 33, 38, 0.13), 0 0 2px rgba(29, 33, 38, 0.1);
 }
 
 .header h1 {
-    position: absolute;
-    width: 124px;
-    height: 29px;
-    left: 1086px;
-    top: 17px;
-
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 600;
