--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -8,7 +8,7 @@
     position: absolute;
     width: 317px;
     height: 720px;
-    left: 0;
+    left:0;
     top: 0;
     background: #FFFFFF;
     box-shadow: 0 10px 40px rgba(29, 33, 38, 0.13), 0 1px 2px rgba(29, 33, 38, 0.1);
@@ -18,7 +18,7 @@
 
 .background {
     position: absolute;
-    width: 1280px;
+    width: 100%;
     height: 100vh;
     left: 0;
     top: 0;
